[package]
name = "pumpkin-pie-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "GPL-3.0"

[features]
default = ["config_toml"]
config_toml = ["config", "dep:toml"]
config = ["dep:serde"]

[dependencies]
pumpkin-plugin-api = { branch = "wit-fixes", git = "https://github.com/Alvsch/Pumpkin", package = "pumpkin-plugin-api" }

serde = { version = "1.0.228", features = ["derive"], optional = true }
toml = { version = "1.1.2", optional = true }