[package]
name = "pumpkin-pie-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "GPL-3.0"

[features]
default = ["config_toml"]
config_toml = ["config", "dep:toml"]
config = ["dep:serde"]
mini_message = ["dep:logos"]

[dependencies]
pumpkin-plugin-api = { version = "0.1.0", git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-plugin-api" }

serde = { version = "1.0.228", features = ["derive"], optional = true }
toml = { version = "1.1.2", optional = true }
logos = { version = "0.16.1", optional = true }
